Resolved all the PR comments